# pii-safe-poc

./: .gitignore  README.md  architecture-diagram.html  demo.cast  demo.sh  demo_script.json  pyproject.toml  record-demo.sh
benchmarks/: entity_resolution_bench.py  tier1_latency_bench.py
benchmarks/datasets/: synthetic_entities.json
fixtures/: sample_json.json  sample_text.txt
policies/: default.yaml
src/: cli.py  demo.py  detector.py  engine.py  mcp_server.py  policies.py  sanitizer.py  tier2_lite.py
src/entity_resolution/: __init__.py  fingerprint.py  indexes.py  phonetic.py  resolver.py  scorer.py  session.py  similarity.py
src/tier1/: __init__.py  patterns.py  validators.py
tests/: test_detector.py  test_engine.py  test_entity_resolution.py  test_sanitizer.py  test_tier1.py
